Gnome-shell crashes with "meta_monitor_manager_get_logical_monitor_from_number: assertion '(unsigned int) number < g_list_length (manager->logical_monitors)' failed"
Affected version
Running up-to-date Arch.
mutter 46.0-1
gnome-shell 1:46.0-1
Bug summary
Seems like crash happens when I disconnect my dock from my laptop. This makes 2 external displays disappear, and makes gnome-shell crash.
Similar to #2846 (closed) , but no tiling extension installed.
Never had it in previous versions, only since update to 46.
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:245:DP-1]
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:245:DP-1] disconnected
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:257:HDMI-A-1]
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:257:HDMI-A-1] disconnected
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:263:DP-2]
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:263:DP-2] disconnected
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:272:DP-3]
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:272:DP-3] disconnected
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:281:DP-4]
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:281:DP-4] disconnected
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:289:DP-5]
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:289:DP-5] status updated from connected to disconnected
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:289:DP-5] disconnected
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:291:DP-7]
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:291:DP-7] status updated from connected to disconnected
mrt 28 16:19:04 xxx kernel: [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:291:DP-7] disconnected
And this seems to cause gnome-shell to crash:
mrt 28 16:19:04 xxx gnome-shell[1656]: meta_monitor_manager_get_logical_monitor_from_number: assertion '(unsigned int) number < g_list_length (manager->logical_monitors)' failed
mrt 28 16:19:04 xxx gnome-shell[1656]: **
mrt 28 16:19:04 xxx gnome-shell[1656]: libmutter:ERROR:../mutter/src/core/window.c:5805:meta_window_get_work_area_for_logical_monitor: assertion failed: (logical_monitor)
mrt 28 16:19:04 xxx gnome-shell[1656]: Bail out! libmutter:ERROR:../mutter/src/core/window.c:5805:meta_window_get_work_area_for_logical_monitor: assertion failed: (logical_monitor)
mrt 28 16:19:04 xxx gnome-shell[1656]: == Stack trace for context 0x5ba48c7fbad0 ==
mrt 28 16:19:04 xxx gnome-shell[1656]: #0 5ba48c8c72d8 i resource:///org/gnome/shell/ui/init.js:21 (2f1a77170bf0 @ 48)
Steps to reproduce
Unable to really reproduce it, but already had it twice in the week.
Relevant logs, screenshots, screencasts etc.
Backtrace
If something else is needed, I still have the coredump :)
Edited by Jean-Louis Dupond